--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang=“en”>
+	<head>
+		<meta charset="utf-8">
+		<title>ITMD 362 Lab 1</title>
+	</head>
+	<body>
+		<h1>ITMD 362 Lab 1: Asim Hyder</h1>
+		<p>Here is a basic index.html page.</p>
+	</body>
+</html>
