Made some minior changes to the p section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>ITMD 362 Lab 1: Asim Hyder</h1>
-		<p>Here is a basic index.html page.</p>
+		<p>Here is a basic index page.</p>
 	</body>
 </html>
+
